objects/CSIRCD__ATTUSWDSFBatchConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for ATTUS Watch List Check.</description>
    <fields>
        <fullName>CSIRCD__ATTUS_Batch_Size__c</fullName>
        <description>Number of records to send in a batch to CSI. If you get too many script statement errors from the batch process, set this number lower.</description>
        <inlineHelpText>Number of records to send in a batch to CSI. If you get too many script statement errors from the batch process, set this number lower.</inlineHelpText>
        <label>CSI Batch Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSIRCD__ATTUS_GUID__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact CSI Customer Service for this information.</inlineHelpText>
        <label>CSI GUID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Address_DQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Flag indicating whether or not to use available address information to disqualify a name.</inlineHelpText>
        <label>Address DQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Address_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Flag indicating whether or not to consider the address information when reporting a match.</inlineHelpText>
        <label>Street Address Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__BatchName__c</fullName>
        <description>Used to prefix the batch name in WatchDOG Elite.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to prefix the batch name and file name in WatchDOG Elite batch system.</inlineHelpText>
        <label>Batch Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Client_Defined_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Your Salesforce instance name, or any other data to appear within WatchDOG Elite.</inlineHelpText>
        <label>Client Defined 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Corp_Name__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Company Name used when logging into WatchDOG Elite web application.</inlineHelpText>
        <label>Corp Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Country_Field_Type__c</fullName>
        <description>Tells extract which field to put country data into.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use &quot;Name&quot; for spelled out name, ISO2, or ISO3 for standardized codes.</inlineHelpText>
        <label>Country Field Type</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Error_Email__c</fullName>
        <description>Email address to send error reports to.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email address to send error reports to.</inlineHelpText>
        <label>Error Email</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Host_Name__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The hostname portion of the URL.</inlineHelpText>
        <label>Host Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__List_Codes_Extended__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Place for additional List Codes (if needed).  Separate multiple list codes by commas.</inlineHelpText>
        <label>List Codes (Extended)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__List_Codes__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Separate multiple list codes by commas.</inlineHelpText>
        <label>List Codes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__MasterDBUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag indicating whether or not to update your Customer Master database within WatchDOG Elite.</inlineHelpText>
        <label>Update Master DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__RecordTypestoSend__c</fullName>
        <description>A comma separated list of Account Record Types. Only accounts and contacts with this account record type will be sent for screening. If this is left blank, all accounts and contacts will be sent for screening.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A comma separated list of Account Record Types. Only accounts and contacts with this account record type will be sent for screening. If this is left blank, all accounts and contacts will be sent for screening.</inlineHelpText>
        <label>Account Record Types to Send</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Sandbox_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to allow data to be sent from a sandbox environment.</description>
        <inlineHelpText>Check this box to allow data to be sent from a sandbox environment.</inlineHelpText>
        <label>Sandbox Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Save_Data_at_ATTUS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Flag indicating whether or not to save data in WatchDOG Elite database.</inlineHelpText>
        <label>Save Data at CSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Send_All_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to have all accounts sent to CSI for watch list screening.</description>
        <inlineHelpText>Check this box to have all accounts sent to CSI for watch list screening.</inlineHelpText>
        <label>Send Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Send_All_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to have all contacts sent to CSI for watch list screening.</description>
        <inlineHelpText>Check this box to have all contacts sent to CSI for watch list screening.</inlineHelpText>
        <label>Send Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Success_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email address for person receiving batch reports from WatchDOG Elite. If blank, will default to settings within WatchDOG Elite batch system.</inlineHelpText>
        <label>Batch Notification Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Tolerance__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Minimum match score for reporting.</inlineHelpText>
        <label>Tolerance</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSIRCD__URL__c</fullName>
        <description>URL used to access CSI Web Services. Contact CSI Support for this information.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>URL used to access CSI Batch Upload service.</inlineHelpText>
        <label>URL</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CSI Batch Watch List Settings</label>
</CustomObject>